<resources>
    <string name="app_name">TSA Ecommerce App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">TSA Ecommerce App</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="cart">Cart</string>
    <string name="account">My Account</string>
    <string name="app_version">Version: 1.0</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="place_order">Place Order</string>
    <string name="manage_address">Manage Address</string>
    <string name="sign_out">Sign Out</string>
    <string name="shop_by_category">Shop By Category</string>
    <string name="my_account">My Account</string>
    <string name="signin">sign In</string>
    <string name="pin_code">Pin code</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="name">Name</string>
    <string name="otp">OTP</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="register_here">Register Here</string>
    <string name="book_order">Book Order</string>
    <string name="apply">Apply</string>

</resources>