<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:hint="@string/name"
        android:layout_margin="5dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:hint="@string/mobile_number"
        android:inputType="number"
        android:maxLength="10"
        android:layout_margin="5dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:hint="@string/email"
        android:inputType="textWebEmailAddress"
        android:layout_margin="5dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:hint="@string/address"
        android:layout_margin="5dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:hint="@string/pin_code"
        android:maxLength="6"
        android:inputType="number"
        android:layout_margin="5dp"/>


</LinearLayout>